--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -6,10 +6,17 @@ on:
       - main
 
 jobs:
-  build:
-    uses: esphome/workflows/.github/workflows/publish.yml@main
+  base:
+    uses: esphome/workflows/.github/workflows/publish.yml@dependabot/github_actions/esphome/build-action-3.1.0
     with:
       # CHANGEME: Set the filenames of your config files here:
-      files: project-template-esp32.yaml,project-template-esp8266.yaml
+      files: project-esp32.yaml,project-esp8266.yaml
       # CHANGEME: Set the name of your project here:
-      name: Template Project
+      name: Base ESPHome Project
+  debug:
+    uses: esphome/workflows/.github/workflows/publish.yml@dependabot/github_actions/esphome/build-action-3.1.0
+    with:
+      # CHANGEME: Set the filenames of your config files here:
+      files: debug-esp32.yaml,debug-esp8266.yaml
+      # CHANGEME: Set the name of your project here:
+      name: Debug ESPHome Project
